--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div>
 <h1 style="font-family: helvetica; color: #00ff00">DISCORD NITRO GENERATOR</h1>
 <textarea id="a" rows="11" cols="100" readonly style="resize: none;">
-Thanks for using [NitroGen] by 💀 Nagash#7987
+Thanks for using our nitro gen by 0_0#6666 and 💀 Nagash#7987
   
 ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
 [!] Discord Codes will be here.
@@ -22,7 +22,7 @@ Thanks for using [NitroGen] by 💀 Nagash#7987
 
 </textarea>
 <p></p>
-<p style="font-family: helvetica; color: #00ff00">How many codes do you want to generate per second? (Default 5)</p>
+<p style="font-family: helvetica; color: #00ff00">How many codes do you want to generate per second? (Default is 5)</p>
 <input type="text" id="speed" value="5">
 <p></p>
 <button id="generate" class="button">
@@ -35,7 +35,7 @@ Thanks for using [NitroGen] by 💀 Nagash#7987
 
 <button onclick="stop(); document.getElementById('a').value = '\nThank You for Using This Gen\n―――――――――――――――――――――――――――――――――――――――\n[!] Discord Codes will be here.\n[!] MOST OF THE CODES DO NOT WORK!!\n―――――――――――――――――――――――――――――――――――――――\n\n\n'; document.getElementById('b').value = '';" class="button" id="clear">Clear</button>
     
-<button id="save" onclick="var rows = document.getElementById('b').value.split('\n').length -  1; download(rows + ' Unchecked Nitro Codes.txt', 'By discord.gg/dbcdAMq\n\n' + document.getElementById('b').value + '\nDumped by [NitroGen - 💀 Nagash#7987]')" class="button">Save Codes</button>
+<button id="save" onclick="var rows = document.getElementById('b').value.split('\n').length -  1; download(rows + ' Unchecked Nitro Codes.txt', 'By discord.gg/AVtCaZ3\n\n' + document.getElementById('b').value + '\nDumped by [NitroGen - 💀 Nagash#7987]')" class="button">Save Codes</button>
     <p></p>
  
  <a href="https://discord.gg/dbcdAMq"target="_blank" style="font-family:helvetica; color: #00ff00">Join Our Discord Server!</a>
