--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Thanks for using our nitro gen by 0_0#6666 and 💀 Nagash#7987
 <button id="save" onclick="var rows = document.getElementById('b').value.split('\n').length -  1; download(rows + ' Unchecked Nitro Codes.txt', 'By discord.gg/AVtCaZ3\n\n' + document.getElementById('b').value + '\nDumped by [NitroGen - 💀 Nagash#7987]')" class="button">Save Codes</button>
     <p></p>
  
- <a href="https://discord.gg/dbcdAMq"target="_blank" style="font-family:helvetica; color: #00ff00">Join Our Discord Server!</a>
+ <a href="https://discord.gg/AVtCaZ3"target="_blank" style="font-family:helvetica; color: #00ff00">Join Our Discord Server!</a>
 <textarea style="display: none;" id="b" rows="11" cols="100" readonly=""></textarea>
 	<script src="main.js"></script>
 </div>
