--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
 <meta charset="utf-8">
 </head>
 <div>
-<h1 style="font-family: helvetica; color: #00ff00">DISCORD NITRO GENERATOR</h1>
+<h1 style="font-family: helvetica; color: #CC0000">DISCORD NITRO GENERATOR</h1>
 <textarea id="a" rows="11" cols="100" readonly style="resize: none;">
-Thanks for using our nitro gen by 0_0#6666 and 💀 Nagash#7987
+Thanks for using [NitroGen] by 0_0#6666 & 💀 Nagash#7987
   
 ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
 [!] Discord Codes will be here.
-[!] CODES ARE UNCHECKED SO MOST OF THE CODES DO NOT WORK!!
+[!] MOST OF THE CODES WON'T WORK!
 ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
 
 </textarea>
 <p></p>
-<p style="font-family: helvetica; color: #00ff00">How many codes do you want to generate per second? (Default is 5)</p>
+<p style="font-family: helvetica; color: #CC0000">How many codes do you want to generate per second? (Default 5)</p>
 <input type="text" id="speed" value="5">
 <p></p>
 <button id="generate" class="button">
@@ -35,10 +35,10 @@ Thanks for using our nitro gen by 0_0#6666 and 💀 Nagash#7987
 
 <button onclick="stop(); document.getElementById('a').value = '\nThank You for Using This Gen\n―――――――――――――――――――――――――――――――――――――――\n[!] Discord Codes will be here.\n[!] MOST OF THE CODES DO NOT WORK!!\n―――――――――――――――――――――――――――――――――――――――\n\n\n'; document.getElementById('b').value = '';" class="button" id="clear">Clear</button>
     
-<button id="save" onclick="var rows = document.getElementById('b').value.split('\n').length -  1; download(rows + ' Unchecked Nitro Codes.txt', 'By discord.gg/AVtCaZ3\n\n' + document.getElementById('b').value + '\nDumped by [NitroGen - 💀 Nagash#7987]')" class="button">Save Codes</button>
+<button id="save" onclick="var rows = document.getElementById('b').value.split('\n').length -  1; download(rows + ' Unchecked Nitro Codes.txt', 'By discord.gg/dbcdAMq\n\n' + document.getElementById('b').value + '\nDumped by [NitroGen - 💀 Nagash#7987]')" class="button">Save Codes</button>
     <p></p>
  
- <a href="https://discord.gg/AVtCaZ3"target="_blank" style="font-family:helvetica; color: #00ff00">Join Our Discord Server!</a>
+ <a href="https://discord.gg/dbcdAMq"target="_blank" style="font-family:helvetica; color: #CC0000">Join Our Discord Server!</a>
 <textarea style="display: none;" id="b" rows="11" cols="100" readonly=""></textarea>
 	<script src="main.js"></script>
 </div>
