Added Updated Files ~ Halloween theme

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <meta content="width=device-width, initial-scale=1' name='viewport"/>
 <meta property="og:type" content="website">
 <meta property="og:title" content="Discord Nitro Generator" />
-<meta property="og:description" content="A Nitro Gen For Everyone :D" />
-<meta property="og:url" content="https://discord.gg/dbcdAMq" />
+<meta property="og:description" content="#ZeroNitroGen A Nitro Generator for Everyone! Built and maintained by 0_0#6666 and skull Nagash #7987" />
+<meta property="og:url" content="https://discord.gg/AVtCaZ3"/>
 <meta charset="utf-8">
 </head>
 <div>
