--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Thanks for using [NitroGen] by 0_0#6666 & 💀 Nagash#7987
 
 <button onclick="stop(); document.getElementById('a').value = '\nThank You for Using This Gen\n―――――――――――――――――――――――――――――――――――――――\n[!] Discord Codes will be here.\n[!] MOST OF THE CODES DO NOT WORK!!\n―――――――――――――――――――――――――――――――――――――――\n\n\n'; document.getElementById('b').value = '';" class="button" id="clear">Clear</button>
     
-<button id="save" onclick="var rows = document.getElementById('b').value.split('\n').length -  1; download(rows + ' Unchecked Nitro Codes.txt', 'By discord.gg/dbcdAMq\n\n' + document.getElementById('b').value + '\nDumped by [NitroGen - 💀 Nagash#7987]')" class="button">Save Codes</button>
+<button id="save" onclick="var rows = document.getElementById('b').value.split('\n').length -  1; download(rows + ' Unchecked Nitro Codes.txt', 'By discord.gg/AVtCaZ3\n\n' + document.getElementById('b').value + '\nDumped by [NitroGen - 0_0#6666]')" class="button">Save Codes</button>
     <p></p>
  
  <a href="https://discord.gg/AVtCaZ3"target="_blank" style="font-family:helvetica; color: #CC0000">Join Our Discord Server!</a>
