--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div>
 <h1 style="font-family: helvetica; color: #CC0000">DISCORD NITRO GENERATOR</h1>
 <textarea id="a" rows="11" cols="100" readonly style="resize: none;">
-Thanks for using [NitroGen] by 0_0#6666 & 💀 Nagash#7987
+Thanks for using [NitroGen] by 0_0#6666 
   
 ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
 [!] Discord Codes will be here.
